tests/paczka1/fuzzy1/60736827.err
Error in line 3: S166 A504 57,6
Error in line 4: S166 S166 86,0
Error in line 5: S166 S369 45,5
Error in line 6: S166 S166 59,5
Error in line 16: 3Mvob A504 85,9
Error in line 9: EEmXt8PARZ6 S369 16,3
